--- a/Wipy/README
+++ b/Wipy/README
@@ -1,3 +1,6 @@
+#Version 36:
+-modification du fichier html correspondant à l'index du site web, pour utiliser un seul bouton de mise à jour de l'horloge
+
 #Version 35:
 -ajout dans la mémoire "dur" du P5 le nombre de collision capot autorisé avant mise en défaut.
 
